--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "require": {
-        "phpmailer/phpmailer": "^6.8",
-        "paragonie/random_compat": "^9.99"
+        "phpmailer/phpmailer": "^6.11",
+        "paragonie/random_compat": "^9.99",
+        "psr/log": "^3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
