--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ logs/*
 !logs/.gitkeep  # Nếu bạn muốn giữ folder logs rỗng
 .DS_Store  # Cho Mac, nhưng OK cho Windows
 Thumbs.db  # Cho Windows thumbnails
+.env
